[gd_scene load_steps=10 format=2]

[ext_resource path="res://mediumasteroid.png" type="Texture" id=1]
[ext_resource path="res://smallasteroid.png" type="Texture" id=2]
[ext_resource path="res://bigasteroid.png" type="Texture" id=3]
[ext_resource path="res://asteroid.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.6

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 4.2019

[sub_resource type="CircleShape2D" id=4]
radius = 8.51149

[sub_resource type="CircleShape2D" id=5]
radius = 16.5593

[node name="Asteroid" type="RigidBody2D" groups=["asteroids"]]
position = Vector2( 0, 1 )
collision_layer = 4
collision_mask = 15
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 2
contact_monitor = true
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="CollisionShapeSm" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="CollisionShapeMed" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="CollisionShapeBig" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
